--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -1,21 +1,100 @@
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
-  -webkit-appearance: none;
+.weather-app{
+  width: 100%!important; 
+  max-width: 1800px!important;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 100px;
 }
+
+
+.forcast .forcast-item{
+  display: flex;
+  align-items: center!important;
+  justify-content: space-between;
+  width: 100%!important;
+  max-width: 300px;
+  padding: 10px;
+  background-color: rgba(217, 217, 217, 0.44);
+  border-radius: 10px;
+}
+
+
+.forcast .forcast-item .weather-details{
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+.forcast .forcast-item .weather-details .time{
+color: white;
+font-size: 1.1rem;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.forcast .forcast-item .weather-icon {
+width: 32px;
+}
+.forcast .forcast-item .temperature{
+  display: flex;
+  align-items: center;
+
+}
+.forcast .forcast-item .temperature p{
+  color: white;
+  font-size: 1.7rem;
+  font-weight: 500;
+}
+.forcast .forcast-item .details{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.forcast .forcast-item .details .humidity{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+
+.forcast .forcast-item .details .humidity p{
+font-size: 1.1rem;
+color: white;
+}
+.forcast .forcast-item .details .humidity img{
+width: 32px;
+}
+.forcast .forcast-item .details .wind{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.forcast .forcast-item .details .wind p{
+font-size: 1.1rem;
+color: white;
+}
+.forcast .forcast-item .details .wind img{
+width: 32px;
+}
+
+
+
+
+
 .weather {
   background-color: rgba(217, 217, 217, 0.44);
   backdrop-filter: blur(5px);
   width: 300px;
-  height: fit-content;
-    padding-block: 20px;
-  border-radius: 30px;
+  height: 400px;
+  padding-block: 20px;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 10px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .search {
   display: flex;
@@ -55,85 +134,78 @@ input[type="search"]::-webkit-search-results-decoration {
   cursor: pointer;
 }
 
-.weather-icon {
+.weather .weather-icon {
   height: 64px;
 }
-.temperature{
-    display: inline-flex;
-    gap: 10px;
-    align-items: center;
+.weather .temperature {
+  display: inline-flex;
+  gap: 10px;
+  align-items: center;
 }
-.temperature p {
-   
-    font-size: 3rem;
-    font-weight: 500;
-    color: white;
+.weather .temperature p {
+  font-size: 3rem;
+  font-weight: 500;
+  color: white;
 }
-.temperature img{
-    height: 30px;
-}
-
-.country{
-    font-size: 2rem;
-    color: white;
-    margin-top: 10px;
-}
-.details {
-    display: flex;
-    align-items: center;
-    gap: 70px;
-    margin-top: 10px;
-}
-.details-icon {
-    width: 32px;
+.weather .temperature img {
+  height: 30px;
 }
 
-.details div {
-    display: flex;
-    align-items: center;
-     gap: 10px;
+.weather .country {
+  font-size: 2rem;
+  color: white;
+  margin-top: 10px;
 }
-.details div p{
-    color: white;
-    font-size: 1.2rem;
+.weather .details {
+  display: flex;
+  align-items: center;
+  gap: 70px;
+  margin-top: 10px;
+}
+.weather .details-icon {
+  width: 32px;
+}
+
+.weather .details div {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.weather .details div p {
+  color: white;
+  font-size: 1.2rem;
 }
 .weather.isLoading {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-.weather.isLoading div{
-    width: 80%;
-    height: 10px;
-    border-radius: 10px;
-    animation: skeleton-loading 1s linear infinite alternate;
-
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: start;
 }
 
 .skeleton {
-    animation: skeleton-loading 1s linear infinite alternate;
+  animation: skeleton-loading 1s linear infinite alternate;
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: hsl(200, 20%, 80%);
   }
-  
-  @keyframes skeleton-loading {
-    0% {
-      background-color: hsl(200, 20%, 80%);
-    }
-    100% {
-      background-color: hsl(200, 20%, 95%);
-    }
+  100% {
+    background-color: hsl(200, 20%, 95%);
   }
-  
-  .skeleton-text {
-    width: 100%;
-    height: 0.7rem;
-    margin-bottom: 0.5rem;
-    border-radius: 0.25rem;
-  }
-  
-  .skeleton-text__body {
-    width: 75%;
-  }
-  
-  .skeleton-footer {
-    width: 30%;
-  }
+}
+
+.skeleton-text {
+  width: 100%;
+  height: 0.7rem;
+  margin-bottom: 0.5rem;
+  border-radius: 0.25rem;
+}
+
+.skeleton-text__body {
+  width: 75%;
+}
+
+.skeleton-footer {
+  width: 30%;
+}
