--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@
   margin: 0;
   padding: 0;
 }
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  -webkit-appearance: none;
+}
+
 body {
   background: rgb(2, 0, 36);
   background: linear-gradient(
@@ -10,24 +17,25 @@ body {
     rgba(2, 0, 36, 1) 0%,
     rgba(54, 9, 121, 1) 100%
   );
-  background-size: 600% 600%;
-  -webkit-animation: AnimationName 0s ease infinite;
-  -moz-animation: AnimationName 0s ease infinite;
-  animation: AnimationName 0s ease infinite;
+  background-size: 400% 400%;
+  overflow: hidden;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
 }
 
-@-webkit-keyframes AnimationName {
-  0%{background-position:0% 50%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 50%}
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
-@-moz-keyframes AnimationName {
-  0%{background-position:0% 50%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 50%}
-}
-@keyframes AnimationName {
-  0%{background-position:0% 50%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 50%}
+
+
+.swiper-container {
+  transform: none;
 }
